# document-grounded-rag

./: .env.example  .gitignore  README.md  pyproject.toml
data/docs/: doc_1_hfpef_overview.md  doc_2_hfpef_treatments.md  doc_3_cardio_kidney_metabolic.md  doc_4_safety_warnings.md  doc_5_questions_for_doctor.md
docs/: api_examples.md  boundary_cases.md  sample_research_log.jsonl
hfpef_rag/: __init__.py  answerability.py  app.py  config.py  embeddings.py  evidence.py  generator.py  guardrails.py  ingest.py  logging_store.py  pipeline.py  retriever.py  schemas.py  vector_store.py
scripts/: inspect_retrieval.py  run_boundary_cases.py  run_examples.py
tests/: conftest.py  test_api.py  test_evidence.py  test_guardrails.py  test_ingest.py
